plugins {
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

group = 'com.teus'
version = '0.0.1-SNAPSHOT'
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation "com.mysql:mysql-connector-j:9.3.0"
    implementation "com.google.guava:guava:33.3.1-jre"
    implementation "org.mapstruct:mapstruct:1.6.3"
    compileOnly('org.mapstruct:mapstruct-processor:1.6.3')
    compileOnly 'org.projectlombok:lombok:1.18.46'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'
    annotationProcessor('org.mapstruct:mapstruct-processor:1.6.3')
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}
